# ipython-cell-cache

./: README.md  pyproject.toml
ipython_cell_cache/: __init__.py
tests/: test_notebook.ipynb
