[tool.poetry]
name = "ipython-cell-cache"
version = "0.1.0"
description = ""
authors = ["azhig <azhig.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "ipython_cell_cache"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
