[tool.poetry]
name = "ipython-cell-cache"
version = "0.1.0"
description = "Decorators for class methods and functions that aloow you to calculate cache only once while ipython cell running"
authors = ["azhig <azhig.dev@gmail.com>"]
readme = "README.md"
packages = [{ include = "ipython_cell_cache" }]

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
